--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
   <div>
-    <canvas id="canvas" width="200px" height="150px" style="border:solid 1px black;box-sizing:content-box;">
-      <video id="my-video" width="200px" height="150px" autoplay muted playsinline></video>  
+    <canvas id="canvas" width="400px" height="300px" style="border:solid 1px black;box-sizing:content-box;">
+      <video id="my-video" width="400px" height="300px" autoplay muted playsinline></video>  
     </canvas>
     <p>Your ID: <span id="my-id"></span></p>
     <button onclick="start()">バーチャル背景</button>
   </div>
   <div>
-    <p>相手のIDを入力</p>
-    <textarea id="their-id"></textarea>
+    <span>相手のIDを入力:</span>
+    <textarea id="their-id" style="resize: none; width:150px; height:20px;"></textarea>
     <button id="make-call">発信</button>
   </div>  
   <div>
