通話退出の追加

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <span>相手のIDを入力:</span>
     <textarea id="their-id" style="resize: none; width:150px; height:20px;"></textarea>
     <button id="make-call">発信</button>
+    <button id="close-call">退出</button>
   </div>  
   <div>
     <video id="their-video" width="400px" height="300px" autoplay muted playsinline></video>
