マイク・カメラのミュート機能追加

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </canvas>
     <p>Your ID: <span id="my-id"></span></p>
     <button onclick="start()">バーチャル背景</button>
+    <button id="mike-mute">マイクミュート</button>
+    <button id="video-mute">カメラをオフにする</button>
   </div>
   <div>
     <span>相手のIDを入力:</span>
