マイクミュート修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </canvas>
     <p>Your ID: <span id="my-id"></span></p>
     <button onclick="start()">バーチャル背景</button>
-    <button id="mike-mute">マイクミュート</button>
+    <button id="mike-mute">ミュートオン</button>
     <button id="video-mute">カメラをオフにする</button>
   </div>
   <div>
@@ -28,7 +28,7 @@
     <button id="close-call">退出</button>
   </div>  
   <div>
-    <video id="their-video" width="400px" height="300px" autoplay muted playsinline></video>
+    <video id="their-video" width="400px" height="300px" autoplay  playsinline></video>
     <script src="./VideoChat.js"></script>
     <script src="./VirtualBack.js"></script>
   </div>      
